--- a/manuscript/myref.bib
+++ b/manuscript/myref.bib
@@ -1006,7 +1006,8 @@ algorithm turns out to be generally more stable and faster than ordinary belief
 propagation. We characterize the performance of the algorithm, employed as a tool for
 combinatorial optimization, on the random satisfiability problem. Moreover, we trace a
 connection with a recently proposed double-loop algorithm for minimizing Bethe and
-Kikuchi free energies.}
+Kikuchi free energies.
+}}
 @ARTICLE{roosta2008reweighed_sum_product,
 author={T. G. {Roosta} and M. J. {Wainwright} and S. S. {Sastry}},
 journal={IEEE Transactions on Signal Processing},
