one line format

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -1,4 +1,5 @@
 \documentclass[twoside]{article}
+
 % If your paper is accepted, change the options for the package
 % aistats2020 as follows:
 %
@@ -79,7 +80,7 @@
   pdfauthor={Dong Liu},
   pdfsubject={}
 }
-
+\allowdisplaybreaks
 \captionsetup[figure]{labelformat={default},labelsep=period,name={Figure}}
 
 \begin{document}
